Added operation categories.

--- a/force-app/main/default/classes/middleware-invocable/GetCanvasEnrollmentStatus.cls
+++ b/force-app/main/default/classes/middleware-invocable/GetCanvasEnrollmentStatus.cls
@@ -1,5 +1,5 @@
 global with sharing class GetCanvasEnrollmentStatus {
-    @InvocableMethod(Label='GetCanvasEnrollmentStatus' Description = 'Get Canvas Enrollment status - ask middleware about canvas enrollment status of student.')
+    @InvocableMethod(Label='GetCanvasEnrollmentStatus' Description = 'Get Canvas Enrollment status - ask middleware about canvas enrollment status of student.' Category = 'Middleware Operation')
     global static List<MiddlewareIntegration.MiddlewareActionResponse> getCanvasEnrollmentStatus(List<MiddlewareIntegration.MiddlewareUserRequest> enrollmentRequests) {
         List<MiddlewareIntegration.MiddlewareActionResponse> results = new List<MiddlewareIntegration.MiddlewareActionResponse>();
         for(MiddlewareIntegration.MiddlewareUserRequest request : enrollmentRequests) {
