--- a/force-app/main/default/classes/middleware-invocable/GetLoginIdFromOpus.cls
+++ b/force-app/main/default/classes/middleware-invocable/GetLoginIdFromOpus.cls
@@ -1,5 +1,5 @@
 global with sharing class GetLoginIdFromOpus {
-    @InvocableMethod(Label='GetLoginIdFromOpus' Description = 'Ask Middleware to lookup Canvas Login ID in Opus.')
+    @InvocableMethod(Label='GetLoginIdFromOpus' Description = 'Ask Middleware to lookup Canvas Login ID in Opus.' Category = 'Middleware Operation')
     global static List<MiddlewareIntegration.MiddlewareActionResponse> getLoginIdFromOpus(List<String> userIds) {
         List<MiddlewareIntegration.MiddlewareActionResponse> results = new List<MiddlewareIntegration.MiddlewareActionResponse>();
         for(String userId : userIds) {
