--- a/force-app/main/default/classes/middleware-invocable/ValidateTx.cls
+++ b/force-app/main/default/classes/middleware-invocable/ValidateTx.cls
@@ -1,7 +1,7 @@
 global with sharing class ValidateTx {
     @InvocableMethod(Label='ValidateTx' Description = 'Validate a transaction between Authorize.Net & Opus.' Category = 'Middleware Operation')
-    global static List<MiddlewareIntegration.MiddlewareActionResponse> validateTx(List<MiddlewareIntegration.MiddlewareTxRequest> txRequests) {
-        List<MiddlewareIntegration.MiddlewareActionResponse> results = new List<MiddlewareIntegration.MiddlewareActionResponse>();
+    global static List<MiddlewareActionResponse> validateTx(List<MiddlewareIntegration.MiddlewareTxRequest> txRequests) {
+        List<MiddlewareActionResponse> results = new List<MiddlewareActionResponse>();
         for(MiddlewareIntegration.MiddlewareTxRequest request : txRequests) {
             results.add(MiddlewareIntegration.validateTx(request));
         }
