--- a/force-app/main/default/classes/middleware-invocable/GetCanvasEnrollmentStatus.cls
+++ b/force-app/main/default/classes/middleware-invocable/GetCanvasEnrollmentStatus.cls
@@ -1,7 +1,7 @@
 global with sharing class GetCanvasEnrollmentStatus {
     @InvocableMethod(Label='GetCanvasEnrollmentStatus' Description = 'Get Canvas Enrollment status - ask middleware about canvas enrollment status of student.' Category = 'Middleware Operation')
-    global static List<MiddlewareIntegration.MiddlewareActionResponse> getCanvasEnrollmentStatus(List<MiddlewareIntegration.MiddlewareUserRequest> enrollmentRequests) {
-        List<MiddlewareIntegration.MiddlewareActionResponse> results = new List<MiddlewareIntegration.MiddlewareActionResponse>();
+    global static List<MiddlewareActionResponse> getCanvasEnrollmentStatus(List<MiddlewareIntegration.MiddlewareUserRequest> enrollmentRequests) {
+        List<MiddlewareActionResponse> results = new List<MiddlewareActionResponse>();
         for(MiddlewareIntegration.MiddlewareUserRequest request : enrollmentRequests) {
             results.add(MiddlewareIntegration.getCanvasEnrollmentStatus(request));
         }
