--- a/force-app/main/default/classes/middleware-invocable/GetLoginIdFromOpus.cls
+++ b/force-app/main/default/classes/middleware-invocable/GetLoginIdFromOpus.cls
@@ -1,7 +1,7 @@
 global with sharing class GetLoginIdFromOpus {
     @InvocableMethod(Label='GetLoginIdFromOpus' Description = 'Ask Middleware to lookup Canvas Login ID in Opus.' Category = 'Middleware Operation')
-    global static List<MiddlewareIntegration.MiddlewareActionResponse> getLoginIdFromOpus(List<String> userIds) {
-        List<MiddlewareIntegration.MiddlewareActionResponse> results = new List<MiddlewareIntegration.MiddlewareActionResponse>();
+    global static List<MiddlewareActionResponse> getLoginIdFromOpus(List<String> userIds) {
+        List<MiddlewareActionResponse> results = new List<MiddlewareActionResponse>();
         for(String userId : userIds) {
             results.add(MiddlewareIntegration.getLoginIdFromOpus(userId));
         }
