--- a/force-app/main/default/classes/middleware-invocable/MiddlewareActionResponse.cls
+++ b/force-app/main/default/classes/middleware-invocable/MiddlewareActionResponse.cls
@@ -2,7 +2,7 @@
 global with sharing class MiddlewareActionResponse {
     @InvocableVariable(Required=true Label='Action Success' Description='True if the intended action succeeded - does not necessarily mean a change was made.')
     global Boolean success;
-    @InvocableVariable(Required=true Label='Action Success' Description='General message from server - if success=false, should explain why.')
+    @InvocableVariable(Required=true Label='Action Message' Description='General message from server - if success=false, should explain why.')
     global String message;
     @InvocableVariable(Required=true Label='Response Data' Description='A Map of data results - predefined in SF. See Data for descriptions.')
     global MiddlewareActionResponseData data;
