--- a/force-app/main/default/classes/middleware-invocable/MiddlewareActionTxResponse.cls
+++ b/force-app/main/default/classes/middleware-invocable/MiddlewareActionTxResponse.cls
@@ -1,16 +1,15 @@
-@JsonAccess(serializable='always' deserializable='always')
-global with sharing class MiddlewareActionResponse {
+global with sharing class MiddlewareActionTxResponse {
     @InvocableVariable(Required=true Label='Action Success' Description='True if the intended action succeeded - does not necessarily mean a change was made.')
     global Boolean success;
     @InvocableVariable(Required=true Label='Action Message' Description='General message from server - if success=false, should explain why.')
     global String message;
-    @InvocableVariable(Required=true Label='Response Data' Description='A Map of data results - predefined in SF. See Data for descriptions.')
-    global MiddlewareActionResponseData data;
+    @InvocableVariable(Required=true Label='Transaction List' Description='List of transactions for invoice.')
+    global List<MiddlewareTransactionResponse> data;
     @InvocableVariable(Required=true Label='HTTP Status Code' Description='HTTP Response Code - e.g. 200 - OK, 400 - Bad Request.')
     global Integer httpStatus;
 
-    public MiddlewareActionResponse(){}
-    public MiddlewareActionResponse(Boolean success, String message, MiddlewareActionResponseData data) {
+    public MiddlewareActionTxResponse(){}
+    public MiddlewareActionTxResponse(Boolean success, String message, List<MiddlewareTransactionResponse> data) {
         this.success = success;
         this.message = message;
         this.data = data;
