... return the post response

--- a/force-app/main/default/classes/MiddlewareIntegration.cls
+++ b/force-app/main/default/classes/MiddlewareIntegration.cls
@@ -33,6 +33,7 @@ global with sharing class MiddlewareIntegration {
         if(response.getStatusCode() >= 200 && response.getStatusCode() < 300) {
             MiddlewareActionResponse middlewareResponse = (MiddlewareActionResponse)JSON.deserialize(response.getBody(), MiddlewareActionResponse.class);
             middlewareResponse.httpStatus = response.getStatusCode();
+            return middlewareResponse;
         }
 
         return null;
