Handle upsert failure

--- a/force-app/main/default/classes/rest/CpsUpsert.cls
+++ b/force-app/main/default/classes/rest/CpsUpsert.cls
@@ -12,8 +12,12 @@ global class CpsUpsert {
             // Great - we MUST have them!
             Contact upsertContact = new Contact(CSU_ID__c = cpsContact.CSU_ID__c, CPS_Provider_ID__c = cpsContact.CPS_Provider_ID__c);
             Database.UpsertResult result = Database.upsert(upsertContact, Contact.CSU_ID__c, false);
-            upsertContact = [SELECT Id, Front_Door_ID__c from Contact where Id = :result.Id];
-            return new Map<String, String> {'success' => 'true', 'message' => 'CSU_ID set.', 'Id' => result.id, 'csuoee__Front_Door_ID__c' => upsertContact.Front_Door_ID__c};
+            if(result.success) {
+                upsertContact = [SELECT Id, Front_Door_ID__c from Contact where Id = :result.Id];
+                return new Map<String, String> {'success' => 'true', 'message' => 'CSU_ID set.', 'Id' => result.id, 'csuoee__Front_Door_ID__c' => upsertContact.Front_Door_ID__c};
+            } else {
+                return new Map<String, String> {'success' => 'false', 'message' => result.errors[0].message};
+            }
         }
 
         // Second, official email.
