Added helpers for "current term" items

--- a/force-app/main/default/classes/aura-enabled-eda/QueryEnrollments.cls
+++ b/force-app/main/default/classes/aura-enabled-eda/QueryEnrollments.cls
@@ -1,4 +1,21 @@
 global with sharing class QueryEnrollments {
+    
+    private static hed__Term__c currentTerm = null;
+    @AuraEnabled(cacheable = true)
+    global static hed__Term__c getCurrentTerm() {
+        Date today = Date.today();
+        if(currentTerm == null || (currentTerm.hed__Start_Date__c <= today && currentTerm.hed__End_Date__c >= today)) {
+            hed__Term__c newCurrent = [SELECT Id, Name, hed__Start_Date__c, hed__End_Date__c FROM hed__Term__c WHERE RecordType = 'Credit' AND hed__Start_Date__c <= :today AND hed__End_Date__c >= :today ORDER BY hed__Start_Date__c ASC LIMIT 1];
+            if(newCurrent == null) return currentTerm;
+            currentTerm = newCurrent;
+        }
+        return currentTerm;
+    }
+
+    @AuraEnabled(cacheable = true)
+    global static List<hed__Course_Enrollment__c> getStudentEnrollmentsInCurrentTerm(Contact contact) {
+        return getStudentEnrollments(getCurrentTerm(), contact);
+    }
 
     @AuraEnabled(cacheable = true)
     global static List<hed__Course_Enrollment__c> getStudentEnrollments(hed__Term__c term, Contact contact) {
@@ -6,8 +23,18 @@ global with sharing class QueryEnrollments {
     }
 
     @AuraEnabled(cacheable = true)
+    global static List<hed__Course_Enrollment__c> getPendingStudentEnrollmentsInCurrentTerm(Contact contact) {
+        return getPendingStudentEnrollments(getCurrentTerm(), contact);
+    }
+
+    @AuraEnabled(cacheable = true)
     global static List<hed__Course_Enrollment__c> getPendingStudentEnrollments(hed__Term__c term, Contact contact) {
         return getSpecifiedEnrollments(new Map<String, Object> {'recordTypeName' => 'Student_Pending'}, term, contact);
+    }
+
+    @AuraEnabled(cacheable = true)
+    global static List<hed__Course_Enrollment__c> getFacultyEnrollmentsInCurrentTerm(hed__Term__c term, Contact contact) {
+        return getFacultyEnrollments(getCurrentTerm(), contact);
     }
 
     @AuraEnabled(cacheable = true)
